fix register and initial code api comment
